2006-09-29  Don Allingham  <don@gramps-project.org>
	* src/FilterEditor/_EditRule.py: limit source name in menu display
	to 40 characters (#451)
	* src/GrampsDb/_ReadGedcom.py: Handle the Place/Address combination
	for events

2006-09-28  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PlaceView.py: add street column (bug #459)
	* src/DisplayModels/_PlaceModel.py: add street column
	* src/GrampsDb/_GrampsDbBase.py: add street column

2006-09-27  Brian Matherly  <brian@gramps-project.org>
    * src/ReportBase/_StyleEditor.py: Make style editor not modal
    * src/glade/gramps.glade: Make style editor not modal

2006-09-26  Brian Matherly  <brian@gramps-project.org>
    * src/GrampsLogger/_ErrorReportAssistant.py: Fix typo.

2006-09-25  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: fix message
	* src/Config/_GrampsConfigKeys.py: set default value
	* src/QuestionDialog.py: set value from config
	* data/gramps.schemas.in: fix default value
	* src/GrampsDb/_GrampsDBCallback.py: catch db transaction problem
	* src/GrampsCfg.py: reset PORT_WARN when TRANSACTION re-enabled
	* src/QuestionDialog.py: sync changes to config value
	* src/GrampsLogger/_ErrorReportAssistant.py: fix typo
	
2006-09-24  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: fix call to warning dialog
	* src/QuestionDialog.py: Don't do internal check on value

2006-09-24  Brian Matherly  <brian@gramps-project.org>
    * src/plugins/AncestorReport.py: Fix generation numbers.
    * src/GrampsLogger/_ErrorReportAssistant.py: Fix email client launch (#455)

2006-09-23  Don Allingham  <don@gramps-project.org>
	* src/images/sources.svg: new icon
	* src/images/reports.svg: new icon
	* src/images/tools.svg: new icon
	* src/images/events.svg: new icon
	* src/images/place.svg: new icon
	* src/images/tools.svg: new icon
	* src/ViewManager.py: use new icons
	* src/gramps_main.py: register new icons

2006-09-22  Don Allingham  <don@gramps-project.org>